--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Radial</string>
+
+    <string name="text_drawing_speed_control">Drawing speed control</string>
 </resources>
